--- a/style.css
+++ b/style.css
@@ -6,19 +6,102 @@ html {
 
 body {
     font-family: 'Bai Jamjuree', sans-serif;
-    padding: 0 82px;
+    color: white;
+    padding: 0 20px;
     max-width: 1200px;
     margin: 0 auto;
+    background: url(https://storage-web.b-cdn.net/Waves-3.4s-2744px.svg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;  
 }
 
-.projects-list {
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    width: 100%;
+  }
+
+nav p {
+    font-size: 30px;
+}
+
+  a {
+    color: white;
+  }
+
+  .navigation-items {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    align-items: center;
+    margin: 0;
+    margin-left: auto;
+  }
+
+  .navigation-item {
+    margin: 10px;
+  }
+  
+
+.projects-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
 }
 
+header {
+    text-align: center;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+header p {
+    font-size: 18px;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    border-top: 1px solid rgb(216, 216, 216, 0.5);
+    padding: 50px 0px;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (min-width: 768px) { 
-    .projects-list {
+    
+    h1 {
+        font-size: 80px;
+    }
+
+    header p {
+        font-size: 30px;
+    }
+    
+    .projects-grid {
       grid-template-columns: repeat(2, 1fr);
     }
   }
