--- a/style.css
+++ b/style.css
@@ -6,23 +6,29 @@ html {
 
 body {
     font-family: 'Bai Jamjuree', sans-serif;
-    color: white;
-    padding: 0 20px;
-    max-width: 1200px;
+    color: white;    
     margin: 0 auto;
     background: url(https://storage-web.b-cdn.net/Waves-3.4s-2744px.svg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;  
+    background-size: cover; 
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
-    width: 100%;
+    padding: 0px 20px;
+    position: sticky;
+    top: 0;
+    backdrop-filter: blur(8px) saturate(180%);
+    -webkit-backdrop-filter: blur(8px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+
+
   }
 
 nav p {
@@ -51,15 +57,26 @@ nav p {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
+    margin: 0 auto;
+}
+
+article {
+    backdrop-filter: blur(8px) saturate(180%);
+    -webkit-backdrop-filter: blur(8px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 header {
     text-align: center;
+    max-width: 1200px;
     height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
 }
 
 h1 {
@@ -70,6 +87,14 @@ header p {
     font-size: 18px;
 }
 
+main {
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 1200px;
+}
+
 footer {
     display: flex;
     align-items: center;
@@ -77,6 +102,8 @@ footer {
     padding: 50px 0px;
     justify-content: space-between;
     margin-top: 50px;
+    margin: 0 auto;
+    max-width: 1200px;
 }
 
 
