--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ nav {
     backdrop-filter: blur(8px) saturate(180%);
     -webkit-backdrop-filter: blur(8px) saturate(180%);
     background-color: rgba(17, 25, 40, 0.75);
-    border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
 
 
@@ -35,29 +34,74 @@ nav p {
     font-size: 30px;
 }
 
-  a {
+a {
     color: white;
-  }
+    text-decoration: none;
+}
 
-  .navigation-items {
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.project-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(0.6);
+  -ms-transform: translate(-50%, -50%) scale(0.6);
+  transform: translate(-50%, -50%) scale(0.6);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 150px;
+  height: 150px;
+  padding: 30px;
+  border-radius: 50%;
+  background: rgba(17, 25, 40, 0.9);
+  text-align: center;
+  opacity: 0;
+  font-size: 30px;
+  line-height: 1.33333;
+  font-weight: 500;
+  color: #fff;
+  -webkit-transition: all .25s;
+  -o-transition: all .25s;
+  transition: all .25s;
+}
+
+article:hover .project-box {
+  opacity: 1;
+  -webkit-transform: translate(-50%, -50%) scale(0.7);
+  -ms-transform: translate(-50%, -50%) scale(0.7);
+  transform: translate(-50%, -50%) scale(0.7);
+}
+
+.navigation-items {
     display: flex;
     list-style-type: none;
     padding: 0;
     align-items: center;
     margin: 0;
     margin-left: auto;
-  }
+ }
 
-  .navigation-item {
+.navigation-item {
     margin: 10px;
-  }
-  
+  }  
 
 .projects-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     margin: 0 auto;
+    padding: 0 30px;
 }
 
 article {
@@ -66,6 +110,15 @@ article {
     background-color: rgba(17, 25, 40, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
+    padding: 30px 30px;
+    transition: transform 0.3s ease;
+}
+
+article:hover {
+  background-color: rgba(14, 18, 26, 0.5);
+  transform: translateY(-2%);
+  transition: transform 0.3s ease;
+  
 }
 
 header {
@@ -93,6 +146,21 @@ main {
     justify-content: center;
     text-align: center;
     max-width: 1200px;
+}
+
+
+
+.projects-heading {
+  margin-bottom: 80px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+
+.together-section {
+  margin: 80px 0;
 }
 
 footer {
@@ -124,11 +192,24 @@ footer {
         font-size: 80px;
     }
 
+    h2 {
+      font-size: 60px;
+    }
+
     header p {
         font-size: 30px;
     }
     
     .projects-grid {
       grid-template-columns: repeat(2, 1fr);
+    }
+
+    article h3{
+      font-size: 30px;
+      margin-bottom: 0;
+    }
+
+    article p {
+      font-size: 20px;
     }
   }
